--- a/2/index.html
+++ b/2/index.html
@@ -13,3 +13,7 @@ Kelompok: SI5j<br>
   <li>wordpress memiliki 2 sisi, 1 tampilan backend (untuk admin/dashboard) dan 1 nya lagi tampilan front end (untuk pengunjung/client area)</li>
   <li>untuk backend, harus login dulu di alamat <a href="http://localhost/si5a2122o/wp-admin" target="_blank">http://localhost/si5a2122o/wp-admin</a></li>
 </ol>
+
+Berikut tampilan halaman web setelah di restore:<br>
+<a href="mulai.png" target="_blank"><img src="pertemuan 2.png" width="300px" height="150px"></a>
+<br>
