--- a/2/index.html
+++ b/2/index.html
@@ -15,5 +15,10 @@ Kelompok: SI5j<br>
 </ol>
 
 Berikut tampilan halaman web setelah di restore:<br>
-<a href="mulaipertemuan 2.png" target="_blank"><img src="pertemuan 2.png" width="300px" height="150px"></a>
+<a href="pertemuan 2.png" target="_blank"><img src="pertemuan 2.png" width="300px" height="150px"></a>
 <br>
+Berikut tampilan front end:<br>
+<a href="pertemuan 2.png" target="_blank"><img src="pertemuan 2.png" width="300px" height="150px"></a>
+<br>
+Berikut tampilan back end:<br>
+<a href="admin.png" target="_blank"><img src="admin.png" width="300px" height="150px"></a>
